--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,4 +1,12 @@
-# Fallback if config.yaml is missing values
+input_pattern: "*.simtel.gz"
+output_suffix: ".hdf5"
+
+overwrite: True
+
+allowed_cameras: 
+  - LSTCam
+  - NectarCam
+  - DigiCam
 
 cleaning_level:
   LSTCam: 
@@ -14,6 +22,8 @@ cleaning_level:
     - 4.5
     - 2
 
+reco_algorithm: planes
+
 names_to_id:
  LSTCam: 1
  NectarCam: 2
@@ -26,25 +36,12 @@ types_to_id:
   MST: 2
   SST: 3
 
-allowed_cameras: 
-  - LSTCam
-  - NectarCam
-  - DigiCam
-
 n_events: -1
 
 n_jobs: 1
-
-reco_algorithm: planes
-
-overwrite: False
 
 chunksize: 50
 
 silent: False
 
 verbose: 50
-
-input_pattern: "*.simtel.gz"
-
-output_suffix: ".hdf5"
