--- a/config/sample_config.yaml
+++ b/config/sample_config.yaml
@@ -1,3 +1,15 @@
+# All needed entries with default (working) values for the script
+
+input_pattern: "*.simtel.gz"
+output_suffix: ".hdf5"
+
+overwrite: False
+
+allowed_cameras: 
+  - LSTCam
+  - NectarCam
+  - DigiCam
+
 cleaning_level:
   LSTCam: 
     - 3.5
@@ -12,6 +24,8 @@ cleaning_level:
     - 4.5
     - 2
 
+reco_algorithm: planes
+
 names_to_id:
  LSTCam: 1
  NectarCam: 2
@@ -24,18 +38,9 @@ types_to_id:
   MST: 2
   SST: 3
 
-allowed_cameras: 
-  - LSTCam
-  - NectarCam
-  - DigiCam
-
 n_events: -1
 
 n_jobs: 1
-
-reco_algorithm: planes
-
-overwrite: False
 
 chunksize: 50
 
